# lcls-tools

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  run_tests.py  search.html  setup.py  sitemap.xml
.github/workflows/: documentation.yml  lint.yml  python-app.yml  python-package.yml  test-build.yml  tests.yml
Correlation_Plot/: index.html
Data_Analysis/: index.html
Devices/: index.html
Emittance_Scan/: index.html
Image_Processing/: index.html
Logger/: index.html
Math_Tools/: index.html
Solenoid_Calculation/: index.html
docs/: Correlation Plot.md  Correlation_Plot.md  Data_Analysis.md  Devices.md  Emittance_Scan.md  Image_Processing.md  Math_Tools.md  Solenoid Calculation.md  Solenoid_Calculation.md  about.md  index.md
docs/source/: area.rst  beampath.rst  conf.py  data_analysis.rst  devices.rst  image.rst  (+5 more)
doctrees/: area.doctree  beampath.doctree  devices.doctree  environment.pickle  image.doctree  image_processing.doctree  index.doctree  matlab2py.doctree
examples/: ProfMon-CAMR_LGUN_950-2019-08-15-171000.mat  example_measurement.ipynb  image_analysis.py  image_data_analysis.py  matlab_image_analysis.py  modeling_test.py
html/: .buildinfo  area.html  beampath.html  devices.html  genindex.html  image.html  image_processing.html  index.html  matlab2py.html  objects.inv  py-modindex.html  search.html  searchindex.js
image/: read_xcor_data.py
lcls_tools/: __init__.py
search/: search_index.json
site/: 404.html  index.html
(+409 files in other folders)
